# SolTrace

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  parent-dir-CMakeLists.txt
app/: CMakeLists.txt
app/build_linux/: Makefile  Makefile-ui
app/build_osx/: Info-SolTrace.plist  Makefile  SolTrace.icns
app/build_vc2013/: soltrace.vcxproj
app/build_vc2017/: soltrace.vcxproj
app/build_vs2017/: soltrace.sln  soltrace.vcxproj
app/deploy/: setup_disclaimer.rtf  setup_script.iss
app/deploy/api/: .gitignore  Doxyfile  LS3trough-singlestage.stinput  LS3trough.stinput  NSO-trough.py  README.md  compare-soltrace-cases.py  convert_pickle_to_csv.py  coretrace_api.dylib  demo_prep.py  environment.yaml  example_run.py  ipython.html  main-runsoltrace-iterate.py  post-processing.py  postprocessing_functions.py  pysoltrace.py  run_pysoltrace_iterate.py  sensitivity-mesh-fluxmap.py  sensitivity-num-rays.py  spa_troughangle_validation.py  st-postprocessing.py  st_processing_functions.py  test-trough.py  test.py  trough-demo.py
app/deploy/api/examples/: tower-demo.py  trough-demo.py
app/deploy/api/examples/parabolic-trough-tracking-timeseries/: README.md  example_field_data.csv  example_field_data.p  example_prep.py  example_run.py  nominal_1_15_1E+05hits_realistic_optics.csv  run_pysoltrace_iterate.py  st_processing_functions.py
app/deploy/api/html/: annotated.html  classes.html  classpysoltrace_1_1_point-members.html  classpysoltrace_1_1_point.html  classpysoltrace_1_1_py_sol_trace-members.html  classpysoltrace_1_1_py_sol_trace.html  classpysoltrace_1_1_py_sol_trace_1_1_optics-members.html  classpysoltrace_1_1_py_sol_trace_1_1_optics.html  classpysoltrace_1_1_py_sol_trace_1_1_optics_1_1_face-members.html  classpysoltrace_1_1_py_sol_trace_1_1_optics_1_1_face.html  classpysoltrace_1_1_py_sol_trace_1_1_stage-members.html  classpysoltrace_1_1_py_sol_trace_1_1_stage.html  classpysoltrace_1_1_py_sol_trace_1_1_stage_1_1_element-members.html  classpysoltrace_1_1_py_sol_trace_1_1_stage_1_1_element.html  classpysoltrace_1_1_py_sol_trace_1_1_sun-members.html  classpysoltrace_1_1_py_sol_trace_1_1_sun.html  doxygen_crawl.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js
app/deploy/api/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+7 more)
app/deploy/api/latex/: annotated.tex  classpysoltrace_1_1_point.tex  classpysoltrace_1_1_py_sol_trace.tex  classpysoltrace_1_1_py_sol_trace_1_1_optics.tex  classpysoltrace_1_1_py_sol_trace_1_1_optics_1_1_face.tex  classpysoltrace_1_1_py_sol_trace_1_1_stage.tex  classpysoltrace_1_1_py_sol_trace_1_1_stage_1_1_element.tex  classpysoltrace_1_1_py_sol_trace_1_1_sun.tex  make.bat  refman.tex
app/deploy/api/tests/: test_flux_map.py  test_ideal_intercept_factor.py  test_intercept_factor.py  test_projected_sun_angle.py
app/deploy/help/: soltrace 59163_opensource.docx
app/deploy/samples/: Aperture Examples.stinput  Aperture Sample-Built In.stinput  Aperture Sample-External Files.stinput  CPC Test.csi  CSR0.sun  CSR10.sun  CSR20.sun  CSR30.sun  CSR40.sun  CSR5.sun  HFSF Single Axis Curvature.stinput  High Flux Solar Furnace.stinput  LS-3 Hot with Shields.stinput  LS-3 with 70mm Receiver.stinput  Pillbox465.sun  Poly Test3.ply  Poly Test4.ply  Power-tower-surround_singlefacet.stinput  Power-tower-surround_singlefacet_large_afternoon.stinput  Refraction.stinput  Solargenix LS-2 Ideal String Schott HCE.stinput  Surface Sample-Finite Element.stinput  VSHOT Test.sht  Zernike Test.mon  lens.stinput  parabola.mon  parabola.ply  parabola.stinput  perfect.opt  sample.fed  sample_un.fed  transmissivity-table.stinput
app/deploy/scripts/: importgeo.lk  statistics.lk  system_setup_1.lk  tmy3.lk
app/resource/: Imagery.pptx  soltrace.rc
app/src/: console.cpp  elementlist.cpp  elementlist.h  fluxmap.cpp  fluxmap.h  geometry.cpp  geometry.h  intersections.cpp  intersections.h  optics.cpp  optics.h  project.cpp  project.h  raydata.cpp  raydata.h  script.cpp  script.h  soltrace.cpp  soltrace.h  sunshape.cpp  sunshape.h  trace.cpp  trace.h
coretrace/: CMakeLists.txt  apertureplane.cpp  determineelementintersectionnew.cpp  dumpsys.cpp  errors.cpp  generateray.cpp  hpvm.h  input.cpp  interaction.cpp  interpolate.cpp  interpolate.h  intersect.cpp  mathproc.cpp  mtrand.h  newzstartforcubicsplinesurf.cpp  procs.h  quadricsurfaceclosedform.cpp  raytrace.cpp  root432.cpp  spencerandmurtysurfaceclosedform.cpp  stapi.cpp  stapi.h  suntoprimarystage.cpp  surface.cpp  surfacenormalerrors.cpp  surfacezatxypair.cpp  torusclosedform.cpp  treemesh.cpp  treemesh.h  types.cpp  types.h  vshot.cpp
coretrace/build_linux/: Makefile
coretrace/build_osx/: Makefile
coretrace/build_vc2013/: coretracelib_vc2013.sln  coretracelib_vc2013.vcxproj  strace_vc2013.vcxproj
coretrace/build_vc2017/: coretracelib_vc2017.sln  strace_vc2017.vcxproj
coretrace/build_vc2017/Win32/strace_vc2017/Debug/: vc141.idb
coretrace/build_vc2017/x64/Debug/: coretracelib_vc2017.idb
coretrace/build_vc2017/x64/strace_vc2017/Debug/: vc141.idb
coretrace/build_vc2017/x64/strace_vc2017/Release/: strace.iobj
coretrace/build_vs2017/: coretracelib_vs2017.sln  coretracelib_vs2017.vcxproj  main.cpp  strace_vs2017.vcxproj
coretrace/build_vs2017/Win32/Debug/: coretracelib_vc2017.idb  coretracelib_vs2017.idb
coretrace/build_vs2017/Win32/strace_vc2017/Release/: strace.iobj  strace.ipdb
coretrace/build_vs2017/Win32/strace_vs2017/Debug/: vc141.idb
coretrace/build_vs2017/x64/Debug/: coretracelib_vs2017.idb
coretrace/strace/: CMakeLists.txt  main.cpp
projectdoc/: TODO.txt  soltrace.tex
(+18 files in other folders)
